Move implementations into modules